# img2ktx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_version.cpp.in  build_version.h  img2ktx.cpp  img2ktx.sln  ispc_texcomp.exp  ispc_texcomp.lib  stb_image.h  stb_image_resize.h
